5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1618_2935.log
== TEST (2019-04-02 10:06:28) 
-- CODE:
ma = float(input("massa a:"))
mb = float(input("massa b:"))
v0 = float()input("velocidade caminhao b:")
vf = ((2*ma) + (mb))/(ma + mb)*v0
print(vf)
-- ERROR:
File "XXXX", line 3
    v0 = float()input()
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:06:39) 
-- CODE:
ma = float(input("massa a:"))
mb = float(input("massa b:"))
vi = float()input("velocidade caminhao b:")
vf = ((2*ma) + (mb))/(ma + mb)*v0
print(vf)
-- ERROR:
File "XXXX", line 3
    vi = float()input()
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:07:14) 
-- CODE:
ma = float(input("massa a:"))
mb = float(input("massa b:"))
vb = float(input("velocidade caminhao b:"))
vf = ((2*ma) + (mb))/(ma + mb)*vb
print(vf)
-- OUTPUT:
10.793225305981728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:07:57) 
-- CODE:
ma = float(input("massa a:"))
mb = float(input("massa b:"))
vb = float(input("velocidade caminhao b:"))
vf = ((2*ma) + (mb))/(ma + mb)*vb
print(vf)
-- EXECUTION TIME:
0.190179
-- TEST CASE 1:
---- input:
123.4
456.7
8.9
---- correct output:
10.793225305981728
---- user output:
10.793225305981728
-- TEST CASE 2:
---- input:
1000.0
5000.0
100.0
---- correct output:
116.66666666666667
---- user output:
116.66666666666667
-- TEST CASE 3:
---- input:
4000.0
6000.0
100.0
---- correct output:
140.0
---- user output:
140.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
